project/stage/tests/accept/empty_functions/no_params/char_func.ul
char f12345098_234fXx_ ( ) { }
