project/stage/tests/reject/bad_statements/bad_println_statements/before_var_decl.ul
void main() {
    println 'c';
    void late;
}
